<resources>
    <string name="app_name">Summer@Bosch2023 Base Summer Project</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="calculate">Multiply</string>
    <string name="result">Result</string>
    <string name="login" translatable="false">Login</string>
    <string name="profile">Profile</string>
    <string name="call">Call</string>
    <string name="temperature">Temperature</string>
    <string name="math">Math</string>
    <string name="gallery">Gallery</string>
    <string name="test">Test</string>
    <string name="makecall">Make Call</string>
    <string name="edit">Edit </string>
    <string name="testing">Testing</string>
    <string name="divide">Divide</string>
    <string name="plus">Plus</string>
    <string name="celsisusfahrenheit" translatable="false">Celsius-Fahrenheit</string>
    <string name="kelvincelsius" translatable="false">Kelvin-Celsius</string>
    <string name="fahrenheitkelvin" translatable="false">Fahrenheit-Kelvin</string>
    <string name="createnewrecord">Create New Record</string>
    <string name="register">Register</string>
    <string name="subtract">Subtract</string>
    <string name="app_name1" translatable="false">Navigation Drawer</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="qr_code" translatable="false">Qr Code</string>
    <string name="button">Button</string>
    <string name="add_pokemon">Add Pokemon</string>
    <string name="add">Add</string>
</resources>